Fixed index table design & fixed deleting questions

--- a/DriVR-Web/DriVR-Web/Views/Question/Index.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Index.cshtml
@@ -22,7 +22,7 @@
     </p>
 
     @*For displaying question info*@
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>
