Added Logic and Data layers

--- a/DriVR-Web/DriVR-Web/Views/Question/Create.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriVR_Web.Models.QuestionInfo
+﻿@model DriVR_Web.Logic.Question
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
