--- a/DriVR-Web/DriVR-Web/Views/Question/Index.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DriVR_Web.Models.QuestionInfo>
+﻿@model IEnumerable<DriVR_Web.Logic.Question>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
