--- a/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DriVR_Web.Logic.Question>
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Overview";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
