Working on interface: clicking create or edit gives error

--- a/DriVR-Web/DriVR-Web/Views/Question/Delete.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriVR_Web.Logic.Question
+﻿@model DriVR_Web.Data.QuestionDTO;
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -37,6 +37,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="ID"/>
         <input type="submit" value="Verwijderen" class="btn btn-danger"/>
-        <a asp-action="Index">Terug naar overzicht</a>
+        <a asp-action="Overview">Terug naar overzicht</a>
     </form>
 </div>
