--- a/DriVR-Web/DriVR-Web/Views/Question/Delete.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriVR_Web.Data.QuestionDTO;
+﻿@model DriVR_Web.Logic.Question;
 @{
     ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
