--- a/DriVR-Web/DriVR-Web/Views/Question/Edit.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DriVR_Web.Data.QuestionDTO;
+﻿@model DriVR_Web.Logic.Question;
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,7 +10,8 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID"/>
+            @*<input type="hidden" asp-for="ID"/>*@
+
             <div class="form-group">
                 <label asp-for="QuestionText" class="control-label">Vraag tekst</label>
                 <input asp-for="QuestionText" class="form-control" />
