fixed everything (somewhat 🙂)

--- a/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DriVR_Web.Data.QuestionDTO>
+﻿@model IEnumerable<DriVR_Web.Logic.Question>
 @{
     ViewBag.Title = "Overview";
     Layout = "~/Views/Shared/_Layout.cshtml";
