View layer now only communicates with logic layer

--- a/DriVR-Web/DriVR-Web/Views/Question/Details.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Details.cshtml
@@ -9,25 +9,25 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                <h4>@Html.DisplayNameFor(model => model.QuestionText):</h4>
+                <u>Vraag tekst:</u>
             </dt>
             <dt>
                 @Html.DisplayFor(model => model.QuestionText)
             </dt>
             <dt>
-                <h4>@Html.DisplayNameFor(model => model.AnswerOne):</h4>
+                <u>Antwoord 1:</u>
             </dt>
             <dt>
                 @Html.DisplayFor(model => model.AnswerOne)
             </dt>
             <dt>
-                <h4>@Html.DisplayNameFor(model => model.AnswerTwo):</h4>
+                <u>Antwoord 2</u>
             </dt>
             <dt>
                 @Html.DisplayFor(model => model.AnswerTwo)
             </dt>
             <dt>
-                <h4>@Html.DisplayNameFor(model => model.AnswerThree):</h4>
+                <u>Antwoord 3:</u>
             </dt>
             <dt>
                 @Html.DisplayFor(model => model.AnswerThree)
