Added 'Afbeelding Bekijken' to QuestionSession

--- a/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/Overview.cshtml
@@ -13,13 +13,9 @@
 </head>
 
 <body>
-    <h1>
-        Vragen overzicht
-    </h1>
+    <h1>Vragen overzicht</h1>
 
-    <p>
-        <a asp-action="Create">Nieuwe vraag aanmaken</a>
-    </p>
+    <p><a asp-action="Create">Nieuwe vraag aanmaken</a></p>
 
     @*For displaying question info*@
     <table class="table table-striped">
