--- a/DriVR-Web/DriVR-Web/Views/Shared/_Layout.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="Overview">Vragen overzicht</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="QuestionSession">Start nieuwe sessie</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="QuestionSession" asp-action="QuestionSession">Start nieuwe sessie</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Question" asp-action="FinishedSessions">Voltooide sessies</a>
