--- a/DriVR-Web/DriVR-Web/Views/Question/AnswerQuestion.cshtml
+++ b/DriVR-Web/DriVR-Web/Views/Question/AnswerQuestion.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AnswerQuestion" asp-route-id="@Model.ID">
+        <form asp-action="AnswerCurrentQuestion" asp-route-id="@Model.ID">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
 
@@ -56,6 +56,7 @@
             </div>
 
             <div class="form-group">
+                @Html.ActionLink("Antwoord bevestigen", "AnswerCurrentQuestion", "Question", Model)
                 <input type="submit" value="Door naar volgende vraag" class="btn btn-success" />
             </div>
         </form>
